apps/zwavejs/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: zwavejs
    app.kubernetes.io/name: zwavejs
    external-dns.invertedorigin.com/enabled: "true"
  name: zwavejs
  namespace: zwavejs
spec:
  ingressClassName: cilium
  rules:
  - host: zwavejs.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: zwavejs
            port:
              number: 8091
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - zwavejs.invertedorigin.com
    secretName: zwavejs-tls-domain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: zwavejs-ws
    app.kubernetes.io/name: zwavejs-ws
    external-dns.invertedorigin.com/enabled: "true"
  name: zwavejs-ws
  namespace: zwavejs
spec:
  ingressClassName: cilium
  rules:
  - host: zwavejs-ws.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: zwavejs
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - zwavejs-ws.invertedorigin.com
    secretName: zwavejs-ws-tls-domain
